feat: Add QueryDSL implementation for department management